# kraken

./: README.md  compile.py  kraken.yml  pyproject.toml  setup.py  validate.py
data/: README.md  coc_adc_reductants_neutral_kraken_input.csv  input.csv  kraken_training_set.csv  small_molecules.csv  to_test_next.txt
kraken/: ConfPruneIdx.c  ConfPruneIdx.pyx  Kraken_Conformer_Selection_Only.py  __init__.py  confsearch.py  dft_dispersion.py  dft_duplicate_detection.py  dft_pint.py  dft_properties.py  dft_utils.py  dft_vmin.py  file_io.py  gaussian_input.py  geometry.py  morfeus_properties.py  new_run_kraken.py  semiempirical.py  structure_generation.py  utils.py  xtb.py
kraken/cli/: __init__.py  example_conf_search_submission_script.py  example_dft_submission_script.py  extract_coordinates_from_yaml.py  extract_dft_files.py  return_dft_files.py  run_kraken_conf_search.py  run_kraken_dft.py  submit_conf_search.py
kraken/slurm_templates/: conf_search_slurm_template.sh  conf_search_slurm_template.slurm  dft_slurm_template.sh  dft_slurm_template.slurm
slurm_templates/: dft_slurm_template.sh  kraken_conf_search.sh
tests/: final_geom.xyz  geometry_generation.py  lec.mol  tmp.xyz
validation/new_dft_yamls/: 00000015_confdata.yml  00000015_data.yml  00000022_confdata.yml  00000022_data.yml  00000030_confdata.yml  00000030_data.yml  00000062_confdata.yml  00000062_data.yml  00000068_confdata.yml  00000068_data.yml  00000069_confdata.yml  00000069_data.yml  00000079_confdata.yml  00000079_data.yml  00000084_confdata.yml  00000084_data.yml  00000104_confdata.yml  (+45 more)
(+1 files in other folders)
